--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BossBattleCardGame</string>
+    <string name="btn_start_game">Start Game</string>
+    <string name="title_boss_battle_card_game">Boss Battle Card Game</string>
+    <string name="btn_settings">Settings</string>
 </resources>
