--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="CardAttackText">Attack</string>
     <string name="CardShieldText">Shield</string>
     <string name="CardHealText">Heal</string>
+    <string name="you_won_round">You Won</string>
+    <string name="btn_nextboss">Next boss</string>
 </resources>
