--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="btn_nextboss">Next boss</string>
     <string name="btn_try_again">Try again</string>
     <string name="text_you_died">You died</string>
+    <string name="game_won_text">You won and defeated all bosses</string>
+    <string name="back_to_main_menu">Back to main menu</string>
 </resources>
